Update the notebook

--- a/workshops/01-building-software-with-llms/notebooks/02_introduction_to_python.ipynb
+++ b/workshops/01-building-software-with-llms/notebooks/02_introduction_to_python.ipynb
@@ -16,20 +16,7 @@
         "id": "QW4Pgh0HOHGy"
       },
       "source": [
-        "This notebook presents a very brief overview of the Python programming language, with a particular slant on tools and applications relevant for data science. It's assumed that the reader has at least a little bit of prior programming experience; the emphasis is primarily on (a) demonstrating how basic things are done in Python, and (b) reviewing the many strengths of Python (and okay, also a few weaknesses). This notebook was forked from [Tal Yarkoni's teaching materials](https://github.com/neurohackademy/introduction-to-python), and has been adapted for this course. Tal's talk is available on [Youtube](https://www.youtube.com/watch?v=d1QZU-ZPOm0) and is 1 hour long if you are looking for a more in-depth walk through video of the code."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iJZw8sj-OHGy"
-      },
-      "source": [
-        "## Install Instructions:\n",
-        "\n",
-        "Windows, Mac, Linux install options for setting up python on your own computer can be found [here](https://python.land/installing-python).\n",
-        "\n",
-        "In this tutorial we will not be using a python install on our own computer, because we are not in-person and therefore I cannot help you troubleshoot individual errors that can come up when installing on your own machine. We will be using python in the browser via [Google Colab](https://colab.research.google.com/notebooks/intro.ipynb). Hopefully you have followed the instructions for launching this notebook and are reading this message in Google Colab!"
+        "This notebook presents a very brief overview of the Python programming language, with a particular slant on tools and applications relevant for data science. It's assumed that the reader has at least a little bit of prior programming experience; the emphasis is primarily on (a) demonstrating how basic things are done in Python, and (b) reviewing the many strengths of Python (and okay, also a few weaknesses). This notebook was forked from [Tal Yarkoni's teaching materials](https://github.com/neurohackademy/introduction-to-python). Tal's talk is available on [Youtube](https://www.youtube.com/watch?v=d1QZU-ZPOm0) and is 1 hour long if you are looking for a more in-depth walk through video of the code."
       ]
     },
     {
