--- a/workshops/01-building-software-with-llms/notebooks/02_introduction_to_python.ipynb
+++ b/workshops/01-building-software-with-llms/notebooks/02_introduction_to_python.ipynb
@@ -39,17 +39,9 @@
       },
       "source": [
         "### Widely-used\n",
-        "* Python is the fastest-growing major programming language\n",
-        "* Top 3 overall (with JavaScript, Java) [source of these rankings](https://redmonk.com/sogrady/2021/03/01/language-rankings-1-21/)."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2ol3rVaQOHGz"
-      },
-      "source": [
-        "<img src=\"https://redmonk.com/sogrady/files/2021/03/lang.rank_.0121.wm_.png\" width=\"800px\" style=\"margin-bottom: 10px;\">"
+        "* Python is the fourth most popular programming language (losing out to JavaScript, HTML/CSS, and SQL), according to the StackOverflow developer survey, and the most popular amongst those learning to program.\n",
+        "\n",
+        "https://survey.stackoverflow.co/2025/technology#most-popular-technologies-language"
       ]
     },
     {
@@ -63,38 +55,6 @@
         "* Many operations that are explicit in lower-level languages (e.g., C/C++) are implicit in Python\n",
         "* E.g., memory allocation, garbage collection, etc.\n",
         "* Python lets you write code faster"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "AcHFOtNKOHGz"
-      },
-      "source": [
-        "#### File reading in Java\n",
-        "```java\n",
-        "import java.io.BufferedReader;\n",
-        "import java.io.FileReader;\n",
-        "import java.io.IOException;\n",
-        "\n",
-        "public class ReadFile {\n",
-        "    public static void main(String[] args) throws IOException{\n",
-        "        String fileContents = readEntireFile(\"./foo.txt\");\n",
-        "    }\n",
-        "\n",
-        "    private static String readEntireFile(String filename) throws IOException {\n",
-        "        FileReader in = new FileReader(filename);\n",
-        "        StringBuilder contents = new StringBuilder();\n",
-        "        char[] buffer = new char[4096];\n",
-        "        int read = 0;\n",
-        "        do {\n",
-        "            contents.append(buffer, 0, read);\n",
-        "            read = in.read(buffer);\n",
-        "        } while (read >= 0);\n",
-        "        return contents.toString();\n",
-        "    }\n",
-        "}\n",
-        "```"
       ]
     },
     {
@@ -253,7 +213,7 @@
       },
       "outputs": [],
       "source": [
-        "random_stuff = [] # Fill the list with stuff!"
+        "random_stuff = [\"test\", 1, 3.14, True] # Fill the list with stuff!"
       ]
     },
     {
@@ -264,7 +224,8 @@
       },
       "outputs": [],
       "source": [
-        "# We index lists by numerical position--starting at 0\n"
+        "# We index lists by numerical position--starting at 0\n",
+        "random_stuff[2]"
       ]
     },
     {
@@ -275,7 +236,8 @@
       },
       "outputs": [],
       "source": [
-        "# We can also slice lists\n"
+        "# We can also slice lists\n",
+        "random_stuff[2:4]"
       ]
     },
     {
@@ -286,7 +248,8 @@
       },
       "outputs": [],
       "source": [
-        "# Append an element\n"
+        "# Append an element\n",
+        "random_stuff.append(\"New\")"
       ]
     },
     {
@@ -310,7 +273,7 @@
       },
       "outputs": [],
       "source": [
-        "random_tuple = ()"
+        "random_tuple = (1, 2, 3)"
       ]
     },
     {
@@ -351,7 +314,8 @@
       },
       "outputs": [],
       "source": [
-        "# What's the price of a mango?\n"
+        "# What's the price of a mango?\n",
+        "fruit_prices['mango']"
       ]
     },
     {
@@ -362,7 +326,8 @@
       },
       "outputs": [],
       "source": [
-        "# Add a new entry for pears\n"
+        "# Add a new entry for pears\n",
+        "fruit_prices['pear'] = 1.25"
       ]
     },
     {
@@ -386,7 +351,8 @@
       },
       "outputs": [],
       "source": [
-        "# Multiply an int by 2"
+        "# Multiply an int by 2\n",
+        "5 * 2"
       ]
     },
     {
@@ -397,7 +363,8 @@
       },
       "outputs": [],
       "source": [
-        "# Multiply a float by 2"
+        "# Multiply a float by 2\n",
+        "3.14 * 2"
       ]
     },
     {
@@ -408,7 +375,8 @@
       },
       "outputs": [],
       "source": [
-        "# What about a string?"
+        "# What about a string?\n",
+        "\"test\" * 2"
       ]
     },
     {
@@ -419,7 +387,8 @@
       },
       "outputs": [],
       "source": [
-        "# A list?"
+        "# A list?\n",
+        "[\"1\", \"2\"] * 2"
       ]
     },
     {
@@ -431,7 +400,8 @@
       },
       "outputs": [],
       "source": [
-        "# A dictionary?"
+        "# A dictionary?\n",
+        "fruit_prices * 2"
       ]
     },
     {
@@ -455,7 +425,13 @@
       },
       "outputs": [],
       "source": [
-        "# Write an if-elif-else statement..."
+        "# Write an if-elif-else statement...\n",
+        "if fruit_prices[\"pear\"] > 1.0:\n",
+        "  print(\"Pears are expensive\")\n",
+        "elif fruit_prices[\"pear\"] < 0.5:\n",
+        "  print(\"Pears are cheap\")\n",
+        "else:\n",
+        "  print(\"Pears are okay\")"
       ]
     },
     {
@@ -467,8 +443,22 @@
       "outputs": [],
       "source": [
         "# Loop over the random_stuff list we created earlier and print each value.\n",
-        "# Alternatively, loop over integers and index into the random_stuff list."
+        "for item in random_stuff:\n",
+        "  print(item)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Alternatively, loop over integers and index into the random_stuff list.\n",
+        "for i in range(len(random_stuff)):\n",
+        "  print(random_stuff[i])"
+      ],
+      "metadata": {
+        "id": "NIn6Ha2bma7E"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -478,7 +468,8 @@
       },
       "outputs": [],
       "source": [
-        "# Now do the same thing as above, but with a list comprehension"
+        "# Now do the same thing as above, but with a list comprehension\n",
+        "[print(item) for item in random_stuff]"
       ]
     },
     {
@@ -706,32 +697,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CgWJpxppOHG9"
-      },
-      "source": [
-        "### Magic methods\n",
-        "* Methods padded with `__` have a variety of special functions in Python\n",
-        "* E.g., `__init__` and/or `__new__` are called when an object is initialized\n",
-        "* All operators in Python are actually just cleverly-disguised method calls\n",
-        "* E.g., the code `age_in_years * 2` is actually equivalent to `age_in_years.__mul__(2)`\n",
-        "* Any object that implements the `__mul__` method can use the `*` operator"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "sra7fmdvOHG9"
-      },
-      "outputs": [],
-      "source": [
-        "# Multiply a circle by 2 and print the resulting circle's area.\n",
-        "# Note: we'll need to add a magic method for __mul__ to our Circle class."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "GJr8MjjKOHG9"
       },
       "source": [
@@ -795,26 +760,9 @@
       "source": [
         "# Summary\n",
         "* Python is the world's most popular dynamic programming language\n",
-        "* It's increasing dominant in the world of data science\n",
-        "* It's (relatively) easy to learn, performant, and has an enormous ecosystem\n",
+        "* It's increasing dominant in the world of machine learning and AI (amongst a lot of other things)\n",
+        "* It's (relatively) easy to learn, and has an enormous ecosystem\n",
         "* \"The second best language for everything\""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ss_XcJ2COHG9"
-      },
-      "source": [
-        "# Resources/further reading\n",
-        "\n",
-        "There are hundreds of excellent resources online for learning Python and/or data science. A few good ones:\n",
-        "\n",
-        "* CodeAcademy offers interactive programming courses for many languages and tools, including [Python](https://www.codecademy.com/learn/python) and [git](https://www.codecademy.com/learn/learn-git)\n",
-        "* [A Whirlwind Tour of Python](http://www.oreilly.com/programming/free/files/a-whirlwind-tour-of-python.pdf) is an excellent intro to Python by [Jake VanderPlas](https://staff.washington.edu/jakevdp/); Jupyter notebooks are available [here](https://github.com/jakevdp/WhirlwindTourOfPython)\n",
-        "* Another excellent and free online book is Allen Downey's [\"Think Python\"](http://greenteapress.com/wp/think-python-2e/)\n",
-        "* Jake Vanderplas's [Python Data Science Handbook](https://github.com/jakevdp/PythonDataScienceHandbook) is also available online as a set of notebooks\n",
-        "* Kaggle maintains a nice list of [data science and Python tutorials](https://www.kaggle.com/learn/overview)"
       ]
     }
   ],
