Save Gemini with Python updates

--- a/workshops/01-building-software-with-llms/notebooks/04_Gemini_with_python.ipynb
+++ b/workshops/01-building-software-with-llms/notebooks/04_Gemini_with_python.ipynb
@@ -17,13 +17,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 💬 Building Software with LLMs\n",
+        "# 💬 Building Software on top of LLMs with Gemini\n",
         "\n",
         "Welcome! This notebook will guide you through using LLMs via API.\n",
         "\n",
         "**Before you start**, make sure you have:\n",
         "1. Your Gemini API key from [aistudio.google.com](https://aistudio.google.com)\n",
-        "2. Added it to Colab Secrets (🔑 icon in left sidebar) with the name `GOOGLE_API_KEY`"
+        "2. Added it to Colab Secrets (🔑 icon in left sidebar) with the name `GEMINI_API_KEY`\n",
+        "\n",
+        "**Note:** The free tier API allowance from Gemini is quite restrictive. If you find that you have hit your limit, the open source `Gemma` models are all available via the API with higher rate limits."
       ],
       "metadata": {
         "id": "intro"
@@ -60,11 +62,11 @@
         "\n",
         "# Get your API key from Colab secrets\n",
         "try:\n",
-        "    genai.configure(api_key=userdata.get('GOOGLE_API_KEY'))\n",
+        "    genai.configure(api_key=userdata.get('GEMINI_API_KEY'))\n",
         "    print(\"✅ API key configured successfully!\")\n",
         "except Exception as e:\n",
         "    print(\"Error: Could not find API key.\")\n",
-        "    print(\"Make sure you've added GOOGLE_API_KEY to your Colab secrets (🔑 icon)\")\n",
+        "    print(\"Make sure you've added GEMINI_API_KEY to your Colab secrets (🔑 icon)\")\n",
         "    print(f\"Error details: {e}\")"
       ]
     },
@@ -146,7 +148,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model = genai.GenerativeModel('gemini-3-flash')\n",
+        "model = genai.GenerativeModel('gemini-3-flash-preview')\n",
         "\n",
         "prompt = \"Explain what an API is in exactly two sentences.\"\n",
         "response = model.generate_content(prompt)\n",
@@ -373,73 +375,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Exercise 3.5: Temperature and Creativity\n",
-        "\n",
-        "The `temperature` parameter controls how \"creative\" or \"random\" the output is."
-      ],
-      "metadata": {
-        "id": "ex35-header"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model = genai.GenerativeModel('gemma-3-27b-it')\n",
-        "\n",
-        "prompt = \"Suggest 3 names for a book shop\"\n",
-        "\n",
-        "print(\"Low temperature (0.1) - More predictable:\")\n",
-        "response = model.generate_content(\n",
-        "    prompt,\n",
-        "    generation_config=genai.GenerationConfig(temperature=0.1)\n",
-        ")\n",
-        "print(response.text)\n",
-        "\n",
-        "print(\"\\nHigh temperature (2.0) - More creative:\")\n",
-        "response = model.generate_content(\n",
-        "    prompt,\n",
-        "    generation_config=genai.GenerationConfig(temperature=2.0)\n",
-        ")\n",
-        "print(response.text)"
-      ],
-      "metadata": {
-        "id": "ex35"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Run this cell multiple times and see how the outputs differ!\n",
-        "\n",
-        "model = genai.GenerativeModel('gemma-3-1b-it')\n",
-        "\n",
-        "print(\"Low temp (run a few times - should be similar):\")\n",
-        "for i in range(3):\n",
-        "    response = model.generate_content(\n",
-        "        \"Name one fruit\",\n",
-        "        generation_config=genai.GenerationConfig(temperature=0.1)\n",
-        "    )\n",
-        "    print(f\"  {i+1}. {response.text.strip()}\")\n",
-        "\n",
-        "print(\"\\nHigh temp (run a few times - should vary):\")\n",
-        "for i in range(3):\n",
-        "    response = model.generate_content(\n",
-        "        \"Name one fruit\",\n",
-        "        generation_config=genai.GenerationConfig(temperature=2.0)\n",
-        "    )\n",
-        "    print(f\"  {i+1}. {response.text.strip()}\")"
-      ],
-      "metadata": {
-        "id": "ex35-demo"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "### Exercise 3.6: Images via the API 🖼️\n",
         "\n",
         "You can also send images to the API! First, upload an image to Colab:\n",
@@ -504,6 +439,66 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Exercise: Try out gemma-3-27b-it or some of the other available models to see how they differ in results"
+      ],
+      "metadata": {
+        "id": "FO4hkVKbZG0D"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Exercise 3.7: Tool Use 🔨\n",
+        "\n",
+        "Tool calling (also known as function calling) allows LLMs to interact with external systems by calling functions you define. Instead of just generating text, the model can:\n",
+        "\n",
+        "1. Recognise when a user's request requires external data or actions\n",
+        "2. Generate a structured function call with the appropriate arguments\n",
+        "3. Use the function's response to formulate its final answer\n",
+        "\n",
+        "Run the cell below to see how the `get_weather` tool is called. Swap out the prompts and see if the tool is still called for questions that are not about the weather."
+      ],
+      "metadata": {
+        "id": "-EgRVNfzaSJ6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_weather(city: str) -> str:\n",
+        "    \"\"\"Get the current weather for a city.\"\"\"\n",
+        "    # Fake weather data for demo purposes\n",
+        "    print(f\"TOOL: Calling the weather tool for {city}\")\n",
+        "    weather_data = {\n",
+        "        \"london\": \"Cloudy, 12°C\",\n",
+        "        \"paris\": \"Sunny, 18°C\",\n",
+        "        \"tokyo\": \"Rainy, 15°C\",\n",
+        "    }\n",
+        "    return weather_data.get(city.lower(), f\"Weather data not available for {city}\")\n",
+        "\n",
+        "\n",
+        "# Create the model with the tool\n",
+        "model = genai.GenerativeModel(\n",
+        "    model_name=\"gemini-2.5-flash\",\n",
+        "    tools=[get_weather],\n",
+        ")\n",
+        "\n",
+        "chat = model.start_chat(enable_automatic_function_calling=True)\n",
+        "\n",
+        "response = chat.send_message(\"What's the weather like in Paris?\")\n",
+        "print(response.text)"
+      ],
+      "metadata": {
+        "id": "qDTWDEFBaRAG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "---\n",
@@ -511,7 +506,7 @@
         "\n",
         "Build a tool to parse line items from receipts. For each line item on the receipt, parse the description and the amount.\n",
         "\n",
-        "**Use the Gemini assistant built into Colab or any other LLMs you wish to help you out!**\n",
+        "**Use the sample code above along with the Gemini assistant built into Colab or any other LLMs you wish to help you out!**\n",
         "\n",
         "When you're done, find other images of receipts on the web to test the parser out and see how well it performs."
       ],
